# event-model

./: .copier-answers.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  _event_model_version.py  catalog-info.yaml  event_model.py  github_deploy_key_bluesky_bluesky_github_io.enc  github_deploy_key_nsls_ii_event_model.enc  github_deploy_key_nsls_ii_nsls_ii_github_io.enc  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  switcher.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  dependabot.yml
309-add-not-required-things-to-datakey-schema/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
321-change-units-to-optional-again/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
conda-recipe/: meta.yaml
doc/: Makefile  make.bat
docs/: _api.rst  conf.py  index.rst  reference.md
dtype_numpy/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
event_model/: .__init__.py.swn  __init__.py  __main__.py  _coercion.py  _composers.py  _enums.py  _errors.py  _numpy.py  _repackers.py  _routers.py  _validators.py  _version.py  general.py  scrub.py  test_em.py  typeddict_to_schema.py
fix-linting/: .buildinfo  genindex.html  index.html  objects.inv  search.html
fix-nullable-units/: .buildinfo  genindex.html  index.html  objects.inv  search.html
fix_search_and_switcher/: .buildinfo  genindex.html  index.html  objects.inv  search.html
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
pkg_resources_dep_v2/: .buildinfo  genindex.html  index.html  objects.inv  search.html
start-model-fix/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
tests/: conftest.py  test_cli.py
v1.19.3/: .buildinfo  genindex.html  objects.inv  search.html
v1.19.4/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.19.5/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.19.6/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.19.7/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.19.8/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.19.9/: index.html  objects.inv
v1.20.0/: objects.inv  searchindex.js
v1.21.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.22.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.22.0-release-notes/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.22.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.22.1rc1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
(+1116 files in other folders)
